master:Added stack-exchange-parser

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://npmcdn.com/tachyons@4.6.1/css/tachyons.min.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.0/vue.min.js"></script>
-    <script type="text/javascript" src="./filteredResult.js"></script>
+    <script type="text/javascript" src="./stackoverflow-data.js"></script>
 
 </head>
 <body>
@@ -23,6 +23,16 @@
             </div>
         </div>
     </template>
+    <template id="user-short">
+        <div>
+            <div v-for="user in users">
+                <div class="pa2 cf">
+                    <div>{{user.title}} / {{user.login}}</div>
+                    <div><a target="_blank" :href="user.href">{{user.href}}</a></div>
+                </div>
+            </div>
+        </div>
+    </template>
 </body>
 <script>
     new Vue({
@@ -30,7 +40,7 @@
         mounted() {
             console.log(this.users);
         },
-        template: '#user',
+        template: '#user-short',
         data: () => ({
             users: DATA
         })
