--- a/index.html
+++ b/index.html
@@ -4,44 +4,64 @@
     <meta charset="UTF-8">
     <title>Javascript: Piter</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link rel="stylesheet" href="https://npmcdn.com/tachyons@4.6.1/css/tachyons.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,700,700i" rel="stylesheet">
+    <link href="https://unpkg.com/lemoncss/dist/lemon.min.css" rel="stylesheet">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.0/vue.min.js"></script>
-    <script type="text/javascript" src="./filteredResult-data.js"></script>
     <style>
         .info-holder {
             display: flex;
-            padding: 10px 15px;
         }
         .image, .info {
             display: inline-block;
         }
+        .info {
+            max-width: 85%;
+        }
         .image {
             width: 70px;
+        }
+        body {
+            padding: 20px;
         }
     </style>
 </head>
 <body>
-    <h2>Yaroslavl</h2>
     <div id="app"></div>
     <template id="user">
-        <div>
-            <div v-for="user in sorted">
-                <div class="info-holder">
-                    <div class="image">
-                        <a target="_blank" :href="user.html_url" class="ph2">
-                            <img width="50px" :src="user.avatar_url" alt="">
-                        </a>
-                    </div>
-                    <div class="info">
-                        <div>{{user.name}} / {{user.login}}</div>
-                        <div><a :href="'mailto:'+user.email">{{user.email}}</a></div>
-                        <div><a target="_blank" :href="user.blog">{{user.blog}}</a> {{user.bio}}</div>
-                        <div>Repos: {{user.public_repos}}</div>
-                        <div>Followers: {{user.followers}}</div>
-                        <div v-if="user.bio">Bio: {{user.bio}}</div>
-                        <div v-if="user.bio">Last activity: {{checkActivity(user.lastActivity)}}</div>
-                    </div>
+        <div class="container">
+            <form v-on:submit.prevent="updateUsers" class="row">
+                <div class="column">
+                    <input type="text" v-model="location" placeholder="location" />
                 </div>
+                <div class="column">
+                    <input type="text" v-model="language" placeholder="language" />
+                </div>
+                <div class="column">
+                    <button>Поиск</button>
+                </div>
+            </form>
+            <div class="row">
+                <div class="column">
+                    <div v-if="!sorted.length">{{ loadingStatus }}</div>
+                        <div v-for="user in sorted" class="row">
+                            <div class="info-holder">
+                                <div class="image">
+                                    <a target="_blank" :href="user.html_url">
+                                        <img width="50px" :src="user.avatar_url" alt="">
+                                    </a>
+                                </div>
+                                <div class="info">
+                                    <div>{{user.name}} / {{user.login}}</div>
+                                    <div><a :href="'mailto:'+user.email">{{user.email}}</a></div>
+                                    <div><a target="_blank" :href="user.blog">{{user.blog}}</a> {{user.bio}}</div>
+                                    <div>Repos: {{user.public_repos}}</div>
+                                    <div>Followers: {{user.followers}}</div>
+                                    <div v-if="user.bio">Bio: {{user.bio}}</div>
+                                    <div v-if="user.bio">Last activity: {{checkActivity(user.lastActivity)}}</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </div>
         </div>
     </template>
@@ -57,34 +77,8 @@
     </template>
 </body>
 <script>
-    new Vue({
-        el: '#app',
-        mounted() {
-            console.log(this.users.length, this.sorted.length);
-        },
-        methods: {
-            checkActivity(item) {
-                if (!item) {
-                    return '';
-                }
-                return new Date(item.created_at).toLocaleString();
-            }
-        },
-        template: '#user',
-        data: () => ({
-            users: DATA
-        }),
-        computed: {
-            sorted() {
-                return this.users
-                    // .sort((a, b) => {
-                    //     return b.public_repos - a.public_repos;
-                    // })
-                    // .filter(({ lastActivity }) => lastActivity)
-                    // .filter(({ public_repos }) => public_repos >= 5)
-                    // .filter(({ followers }) => followers >= 0)
-            }
-        }
-    });
+</script>
+<script>
+    require('./renderer.js');
 </script>
 </html>
